# result

./: .appveyor.yml  .codedocs  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  conanfile.py
.appveyor/: before-build.cmd  install.cmd  test.cmd
.conan/test_package/: CMakeLists.txt  conanfile.py
.conan/test_package/src/: main.cpp
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: analysis.yml  build-macos.yml  build-ubuntu.yml  build-windows.yml  build23-ubuntu.yml  coverage.yml  deploy-conan.yml  deploy-doxygen-latest.yml  deploy-doxygen-release.yml  deploy-doxygen.yml  main.yml  scan-build.yml  vsenv.bat
.travis/: before-script.sh  build.sh  deploy-conan.sh  deploy-doxygen.sh  install.sh
all/: CMakeLists.txt
api/latest/: annotated.html  annotated_dup.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_type.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.dot  inherit_graph_0.md5  inherit_graph_1.dot  inherit_graph_1.md5  inherit_graph_10.dot  inherit_graph_10.md5  inherit_graph_11.dot  inherit_graph_11.md5  inherit_graph_12.dot  inherit_graph_12.md5  inherit_graph_13.dot  inherit_graph_13.md5  inherit_graph_14.dot  inherit_graph_14.md5  inherit_graph_15.dot  inherit_graph_15.md5  inherit_graph_16.dot  inherit_graph_16.md5  inherit_graph_17.dot  inherit_graph_17.md5  inherit_graph_18.dot  inherit_graph_18.md5  inherit_graph_19.dot  inherit_graph_19.md5  inherit_graph_2.dot  inherit_graph_2.md5  inherit_graph_20.dot  inherit_graph_20.md5  (+35 more)
api/latest/d0/d15/: structexpect_1_1detail_1_1disable__move__ctor.html  structexpect_1_1detail_1_1disable__move__ctor.js
api/latest/d0/d18/: union_e_x_p_e_c_t_e_d___n_a_m_e_s_p_a_c_e___i_n_t_e_r_n_a_l_1_1bitwizeshift_1_1detail_1_1expectef987ccd7c785189640af700ddc31d2da.html
api/latest/d0/d2a/: classexpect_1_1bad__expected__access.html  classexpect_1_1bad__expected__access.js
api/latest/d0/d30/: struct_r_e_s_u_l_t___n_a_m_e_s_p_a_c_e___i_n_t_e_r_n_a_l_1_1bitwizeshift_1_1in__place__t-members.html
api/latest/d0/d31/: structcpp_1_1bitwizeshift_1_1is__failure__coll__graph.dot
api/latest/d0/d32/: structcpp_1_1bitwizeshift_1_1is__unexpected__inherit__graph.dot  structcpp_1_1bitwizeshift_1_1is__unexpected__inherit__graph.md5
api/latest/d0/d33/: struct_r_e_s_u_l_t___n_a_m_e_s_p_a_c_e___i_n_t_e_r_n_a_l_1_1bitwizeshift_1_1detail_1_1is__reference__wrapper__inherit__graph.md5
api/latest/d0/d42/: struct_e_x_p_e_c_t_e_d___n_a_m_e_s_p_a_c_e___i_n_t_e_r_n_a_l_1_1bitwizeshift_1_1detail_1_1disabl776f4f6cc50fe0606bb8e40a6fc76f28.dot  struct_e_x_p_e_c_t_e_d___n_a_m_e_s_p_a_c_e___i_n_t_e_r_n_a_l_1_1bitwizeshift_1_1detail_1_1disabl776f4f6cc50fe0606bb8e40a6fc76f28.md5
api/latest/d0/d69/: structexpect_1_1detail_1_1expected__trivial__move__assign__base__impl-members.html
api/latest/d0/d80/: result_8hpp__incl.dot
api/latest/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  (+1 more)
api/v/: annotated.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  functions.html  functions_type.html  graph_legend.html  inherit_graph_0.dot  inherit_graph_3.dot  inherit_graph_4.md5  inherits.html
api/v/search/: all_0.js  all_1.js  functions_3.js  functions_5.js  functions_8.js
api/v0.0.1/: annotated.html  annotated_dup.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_type.html  graph_legend.html  hierarchy.js  index.html  inherit_graph_0.dot  inherit_graph_0.md5  inherit_graph_1.dot  inherit_graph_1.md5  inherit_graph_11.dot  inherit_graph_12.dot  inherit_graph_12.md5  inherit_graph_13.md5  inherit_graph_14.md5  inherit_graph_17.dot  inherit_graph_19.dot  inherit_graph_19.md5  inherit_graph_2.dot  inherit_graph_2.md5  inherit_graph_21.dot  inherit_graph_21.md5  inherit_graph_22.dot  inherit_graph_24.dot  inherit_graph_26.dot  inherit_graph_26.md5  inherit_graph_3.dot  inherit_graph_3.md5  inherit_graph_5.dot  inherit_graph_5.md5  inherit_graph_7.dot  inherit_graph_7.md5  inherit_graph_8.dot  inherit_graph_8.md5  inherit_graph_9.dot  inherit_graph_9.md5  (+5 more)
api/v0.0.1/search/: all_2.js  all_4.js  all_7.js  all_8.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_a.js  searchdata.js  typedefs_1.js  typedefs_2.js  typedefs_3.js
api/v1.0.0/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.js  functions.html  functions_type.html  hierarchy.js  index.html  inherit_graph_0.dot  inherit_graph_4.dot  inherit_graph_6.dot  inherit_graph_6.md5  inherit_graph_7.dot  inherit_graph_7.md5  inherits.html  navtreeindex1.js
api/v1.0.0/search/: all_1.js  all_3.js  all_4.js  all_8.js  all_9.js  all_a.js  classes_1.js  classes_3.js  classes_4.js  functions_4.js  functions_9.js  typedefs_0.js  typedefs_1.js
cmake/: AddSelfContainmentTest.cmake  ExpectedConfig.cmake.in  ResultConfig.cmake  ResultConfig.cmake.in  Warnings.cmake
doc/: building-tests.md  commit-standards.md  deviations-from-proposal.md  examples.md  faq.md  installing.md  legal.md  tutorial.md
doc/doxygen/: footer.html
include/: expected.hpp  result.hpp
test/: CMakeLists.txt  conanfile.txt
test/src/: expected.constexpr.test.cpp  expected.test.cpp  failure.test.cpp  main.cpp  result.constexpr.test.cpp  result.test.cpp  unexpected.test.cpp
(+680 files in other folders)
